<resources>
    <string name="app_name">Sallefy</string>
    <string name="app_id" translatable="false">4F8B3483</string>
    <string name="welcome_to_sallefy">Welcome to Sallefy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="send_mail">Send</string>

    <!--ayda hayagh nakkijd -->

    <string name="action_decline" translatable="false" >Decline</string>
    <string name="action_accept" translatable="false" >Accept</string>
    <string name="create_song_file" translatable="false" />
    <string name="action_cloudinary" translatable="false" />
    <string name="create_song_titulo" translatable="false" />
    <string name="create_song_genre" translatable="false" />
    <string name="url_static" translatable="false" />
    <string name="action_static_playback" translatable="false" />
    <string name="state_with_connection" translatable="false" />
    <string name="action_login">Login</string>
    <string name="action_backend_playback" translatable="false" />

    <string name="name">Title</string>
    <string name="genre">Genre</string>
    <string name="selectFile">Select…</string>
    <string name="cancel">Cancel</string>
    <string name="uploadSong">Upload</string>
    <string name="upload_info">Upload Song</string>
    <string name="songTitle">Song name</string>
    <string name="selectFile_show">Song file</string>
    <string name="uploadImg">Select…</string>
    <string name="selectImg_show">Image file</string>


    <string name="i_liked">I liked</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="show_artist">Show artist</string>
    <string name="delete">Delete</string>

    <string name="track_list">Lista</string>


    <!-- DEFAULT TRACK -->
    <string name="default_track_title">Título canción</string>
    <string name="default_track_author">Author/a</string>

    <!-- FRAGMENTS (LABELS) -->
    <string name="fragment_playlists">Playlists</string>
    <string name="fragment_songs">Songs</string>

    <!-- ACTION -->
    <string name="action_logout">Cerrar sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_advance_list">Mostrat Tracks (avanzado)</string>
    <string name="action_list">Mostrar Tracks</string>
    <string name="create_playlist">Crear Playlist</string>
    <string name="add_song_playlist_main_button">Añadir Canción Playlist</string>
    <string name="show_songs_by_playlist">Ver canciones de la playlist</string>

    <!-- INFO STATE -->
    <string name="state_wait">Porfavor espere..</string>
    <string name="state_task_in_progress">Tarea en proceso</string>
    <string name="state_error_connexion">Error de conexión!</string>
    <string name="state_success_title">Éxito</string>
    <string name="state_task_completed">Tarea completada con éxito!</string>
    <string name="state_error_title">Error</string>
    <string name="state_error_default">Algo salió mal!</string>


    <!-- ACTIVITY [ Login ] -->
    <string name="login_username">Nombre usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_email">Correo electrónico</string>
    <string name="login_yetIdentified">Todavía no estás registrad@ ?</string>
    <string name="login_register_here">Regístrate aquí</string>

    <!--ACTIVITY [Playlist create]-->
    <string name="playlist_name">Nombre playlist</string>
    <string name="create_playlist_name">Crear playlist</string>

    <!--ACTIVITY [Add song to playlist]-->
    <string name="add_song_playlist">Añadir canción</string>
    <string name="numero_id_playlist">ID playlist</string>
    <string name="numero_id_song">ID canción</string>

    <!-- MENU -->
    <string name="menu_home">Inicio</string>
    <string name="menu_search">Busqueda</string>
    <string name="menu_library">Contenido</string>
    <string name="menu_upload">Subir canción</string>
    <string name="menu_share">Share</string>
    <string name="top_liked_tracks">Top liked tracks</string>
    <string name="my_most_played_songs">My most played songs</string>
    <string name="most_followed_tracks">Most followed tracks</string>
    <string name="track_evolution">Track evolution</string>
    <string name="featured">Featured</string>
    <string name="my_playlists">My playlists</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_song_to_playlist">Add song to PlayList</string>
    <string name="select_a_song">Select a song</string>
    <string name="add">Add</string>
    <string name="add_playlist">Add playList</string>
    <string name="the_sound_starts_here">The sound starts here</string>
    <string name="song_title">Song title</string>
    <string name="artist_name">Artist name</string>
    <string name="search_tracks">Search tracks</string>
    <string name="Search">Search</string>
    <string name="library_songs">Library songs</string>
    <string name="cover">Cover</string>
    <string name="playlist_title">Playlist title</string>
    <string name="options">Opciones</string>




</resources>
