<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_info"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"

            android:text="@string/songTitle"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/upload_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/genre"
            android:textColor="@android:color/white" />

        <Spinner
            android:id="@+id/upload_song_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/upload_song_file_name_show"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                     android:text="@string/selectFile_show"
                    android:textColor="@android:color/white"
                    android:gravity="left"/>
                <TextView
                    android:id="@+id/upload_song_img_name_show"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="@string/selectImg_show"
                    android:textColor="@android:color/white"
                    android:gravity="right"
                    />
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/upload_song_find_file"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/selectFile" />

            <Button
                android:id="@+id/upload_song_find_img"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="@string/uploadImg" />

        </LinearLayout>

        <TextView
            android:id="@+id/upload_song_file_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_song_cancel"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/upload_song_done"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="@string/uploadSong" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>