<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.charts.BarChartActivity">

    <Button
        android:id="@+id/buttonBarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/top_liked_tracks"
        android:textColor="#fff"
        android:background="@drawable/button"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonPieChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_most_played_songs"
        android:textColor="#fff"
        android:background="@drawable/button"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/buttonRadarChart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/most_followed_tracks"
        android:textColor="#fff"
        android:background="@drawable/button"/>

</LinearLayout>