<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_animation"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textColor="#fff"
            android:text="@string/add_playlist" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LoginEditText"
            android:layout_marginBottom="15dp"
            android:ems="10"
            android:inputType="text" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/add_playlist_button"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/add"
                android:layout_margin="5dp"
                android:textColor="#fff" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="137dp"
                android:textColor="#fff"
                android:background="@drawable/button"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cancel" />
        </LinearLayout>


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>