<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/track_cover"
        android:layout_width="190dp"
        android:layout_height="190dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="#ffff"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="What Lovers Do (feat. SZA)"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/track_author"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="12sp"
                android:textColor="#ffff"
                android:textStyle="bold"
                android:text="Maroon 5"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_save_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_heart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/i_liked"
            android:textColor="#ffff"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_add_playlist_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_playlist"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#ffff"
            android:text="@string/add_to_playlist"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_share_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:tint="@color/colorWhite"
            android:src="@drawable/ic_user"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#ffff"
            android:text="@string/show_artist"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/detail_radio_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:backgroundTint="#ffffff"
            android:background="@drawable/ic_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:textColor="#ffff"
            android:text="@string/delete"
            android:layout_marginLeft="10dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/detail_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="Cancel"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>
