<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#73c6b6"
    android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_info"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:textStyle=" "
        android:textColor="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="473dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="20dp"

            android:text="@string/songTitle"
            android:textColor="@android:color/white"
            />

        <EditText
            android:id="@+id/upload_song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@android:color/white"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:text="@string/genre"
            android:textColor="@android:color/white"
            />

        <Spinner
            android:id="@+id/upload_song_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="@android:dimen/app_icon_size">

            <Button
                android:id="@+id/upload_song_find_file"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="30dp"
                android:background="@mipmap/ic_launcher_upload"
                tools:ignore="ButtonStyle"
                android:layout_marginEnd="30dp" />

            <Button
                android:id="@+id/upload_song_find_img"
                android:layout_width="70dp"
                android:layout_height="60dp"
                 android:background="@mipmap/ic_launcher_foreground"
                tools:ignore="ButtonStyle" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/upload_song_cancel"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_marginRight="30dp"
                android:background="@mipmap/ic_launcher_upload_return"
                android:layout_marginEnd="30dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/upload_song_done"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:background="@mipmap/ic_launcher_done_upload"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
        <TextView
            android:id="@+id/upload_song_file_name"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:layout_margin="12dp"/>
        <TextView
            android:id="@+id/upload_song_file_img"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/white"
            android:layout_margin="12dp"
            android:visibility="invisible"/>
    </LinearLayout>
</LinearLayout>